# lietorch

./: CMakeLists.txt  LICENSE.md  README.md
include/lietorch/: liegroup.h  pose.h  quaternion.h  rn.h  tangent.h  unit_complex.h
src/: dual_quaternion.cpp  pose.cpp  quaternion.cpp  test.cpp  test2.cpp  test3.cpp  unit_complex.cpp
